test/testData/parser/negative/statements/switch.err
test/testData/parser/negative/statements/switch.c:3:12: error: duplicate case value '4'
test/testData/parser/negative/statements/switch.c:3:14: error: duplicate case value '5'
test/testData/parser/negative/statements/switch.c:3:16: error: duplicate case value '6'
test/testData/parser/negative/statements/switch.c:3:18: error: multiple default labels in one switch
test/testData/parser/negative/statements/switch.c:3:34: error: duplicate case value '-100'
test/testData/parser/negative/statements/switch.c:3:37: error: duplicate case value '-98'
test/testData/parser/negative/statements/switch.c:3:46: error: 'case' statement not in switch statement
test/testData/parser/negative/statements/switch.c:3:51: error: 'case' statement not in switch statement
test/testData/parser/negative/statements/switch.c:3:59: error: 'default' statement not in switch statement
test/testData/parser/negative/statements/switch.c:11:65: error: statement requires expression of integer type ('float' invalid)
test/testData/parser/negative/statements/switch.c:11:74: error: statement requires expression of integer type ('STRUCT SX' invalid)
test/testData/parser/negative/statements/switch.c:11:81: error: statement requires expression of integer type ('*signed int' invalid)
